gitops/apps/clipproxy/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: clipproxy-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: clipproxy
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8317
      targetPort: http
