gitops/apps/clipproxy/base/service-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: clipproxy-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: clipproxy
    app.kubernetes.io/component: manager
  ports:
    - name: http
      port: 18317
      targetPort: http
